More Death Scythe skills - Mark targets
New War Sword
- Make mobs fight each other
- Resistance and strength and absorption if hp low
- Resistance and strength when low and set enemy on fire
- Immune fire

--- a/src/main/resources/assets/vrm/lang/en_us.json
+++ b/src/main/resources/assets/vrm/lang/en_us.json
@@ -1,11 +1,15 @@
 {
-  "itemGroup.vrmItemGroup": "Vulcan's Revenge Mod",
+  "itemGroup.vrmItemGroup": "Vulcan's Revenge Plus+ Mod",
   "item.vrm.vulcansrevenge0": "Vulcan's Revenge: Fire",
   "item.vrm.vulcansrevenge1": "Vulcan's Revenge: Frost",
   "item.vrm.vulcansrevenge2": "Vulcan's Revenge: Heavy",
   "item.vrm.vulcansrevenge3": "Vulcan's Revenge: Wither",
   "item.vrm.brokensword": "Broken Sword",
   "item.vrm.death": "Death Scythe",
+  "item.vrm.war": "War Bringer",
+  "item.vrm.rune0": "Rune",
+  "item.vrm.rune1": "Rune [Death]",
+  "item.vrm.rune2": "Rune [War]",
   "block.vrm.swordstone": "Sword Stone",
   "block.vrm.blazerune": "Activation Rune [Blaze Powder]",
   "block.vrm.netherrune": "Activation Rune [Nether Brick]",
@@ -16,9 +20,13 @@
   "tooltip.mwaw:vulcansrevenge2": "Deals big damage to enemy",
   "tooltip.mwaw:vulcansrevenge3": "Applies Wither onto enemy",
   "tooltip.mwaw:vulcansrevengeinfo": "[Right click to change Stance]",
-  "tooltip.mwaw:death1": "Attack have a chance of life steal",
-  "tooltip.mwaw:death2": "Right-Click to apply voodoo onto target",
-  "tooltip.mwaw:death3": "Shift Right-Click to mark surrounding targets, dealing more damage",
-  "tooltip.mwaw:death4": "Have a chance of revival on death & dealing target's half max hp damage",
+  "tooltip.mwaw:death1": "Attack have a chance to life steal",
+  "tooltip.mwaw:death2": "[Right-Click] Mark surrounding targets, dealing more damage",
+  "tooltip.mwaw:death3": "[Shift Right-Click] Apply voodoo(all damage will be transferred to target) onto target",
+  "tooltip.mwaw:death4": "[Have a chance of revival on death & dealing target's half max hp damage]",
+  "tooltip.mwaw:war1": "Attack have a chance to ignite target",
+  "tooltip.mwaw:war2": "[Right-Click] Gain temporary strength and resistance",
+  "tooltip.mwaw:war3": "[Shift Right-Click] Inflict rage and cause near-by mobs to fight each other",
+  "tooltip.mwaw:war4": "[Gain resistance and strength on low health]",
   "death.attack.death": "%1$s was reaped by %2$s"
 }
