Pestilience Bow - Shoot magical arrow that inflicts plague - plague particle dealing potion effects - charging also produces plague particles - does not use any arrows woo
Famine scale
- texture only.. sad

--- a/src/main/resources/assets/vrm/lang/en_us.json
+++ b/src/main/resources/assets/vrm/lang/en_us.json
@@ -6,27 +6,36 @@
   "item.vrm.vulcansrevenge3": "Vulcan's Revenge: Wither",
   "item.vrm.brokensword": "Broken Sword",
   "item.vrm.death": "Death Scythe",
-  "item.vrm.war": "War Bringer",
+  "item.vrm.war": "Makhaira",
+  "item.vrm.pes": "Pestilence's Bow",
+  "item.vrm.fam": "Famine's Scale",
   "item.vrm.rune0": "Rune",
   "item.vrm.rune1": "Rune [Death]",
   "item.vrm.rune2": "Rune [War]",
+  "item.vrm.rune3": "Rune [Famine]",
+  "item.vrm.rune4": "Rune [Pestilence]",
   "block.vrm.swordstone": "Sword Stone",
   "block.vrm.blazerune": "Activation Rune [Blaze Powder]",
   "block.vrm.netherrune": "Activation Rune [Nether Brick]",
   "block.vrm.scuterune": "Activation Rune [Scute]",
   "block.vrm.magmarune": "Activation Rune [Magma Cream]",
-  "tooltip.mwaw:vulcansrevenge0": "Lights enemy on fire",
-  "tooltip.mwaw:vulcansrevenge1": "Freeze enemy in place",
-  "tooltip.mwaw:vulcansrevenge2": "Deals big damage to enemy",
-  "tooltip.mwaw:vulcansrevenge3": "Applies Wither onto enemy",
-  "tooltip.mwaw:vulcansrevengeinfo": "[Right click to change Stance]",
-  "tooltip.mwaw:death1": "Attack have a chance to life steal",
-  "tooltip.mwaw:death2": "[Right-Click] Mark surrounding targets, dealing more damage",
-  "tooltip.mwaw:death3": "[Shift Right-Click] Apply voodoo(all damage will be transferred to target) onto target",
-  "tooltip.mwaw:death4": "[Have a chance of revival on death & dealing target's half max hp damage]",
-  "tooltip.mwaw:war1": "Attack have a chance to ignite target",
-  "tooltip.mwaw:war2": "[Right-Click] Gain temporary strength and resistance",
-  "tooltip.mwaw:war3": "[Shift Right-Click] Inflict rage and cause near-by mobs to fight each other",
-  "tooltip.mwaw:war4": "[Gain resistance and strength on low health]",
-  "death.attack.death": "%1$s was reaped by %2$s"
+  "tooltip.vrm:vulcansrevenge0": "Lights enemy on fire",
+  "tooltip.vrm:vulcansrevenge1": "Freeze enemy in place",
+  "tooltip.vrm:vulcansrevenge2": "Deals big damage to enemy",
+  "tooltip.vrm:vulcansrevenge3": "Applies Wither onto enemy",
+  "tooltip.vrm:vulcansrevengeinfo": "[Right-Click] Change Stance",
+  "tooltip.vrm:death1": "Attack have a chance to life steal",
+  "tooltip.vrm:death2": "[Right-Click] Mark surrounding targets, dealing more damage",
+  "tooltip.vrm:death3": "[Shift Right-Click] Apply voodoo(all damage will be transferred to target) onto target",
+  "tooltip.vrm:death4": "[Have a chance of revival on death & dealing target's half max hp damage]",
+  "tooltip.vrm:war1": "Attack have a chance to ignite target",
+  "tooltip.vrm:war2": "[Right-Click] Gain temporary strength and resistance",
+  "tooltip.vrm:war3": "[Shift Right-Click] Inflict rage and cause near-by mobs to fight each other",
+  "tooltip.vrm:war4": "[Gain resistance and strength on low health]",
+  "tooltip.vrm:pes1": "Shoot Magical Arrow which causes Plague (will release toxin when target dies)",
+  "tooltip.vrm:pes2": "[Charging] Releases toxin around charger",
+  "tooltip.vrm:pes3": "[Shift Right-Click] ",
+  "tooltip.vrm:pes4": "[Immune to all Negative potion effects]",
+  "death.attack.death": "%1$s was reaped by %2$s",
+  "effect.vrm.plagueeffect": "Plague"
 }
