Death server crashing fix

--- a/src/main/resources/assets/vrm/lang/en_us.json
+++ b/src/main/resources/assets/vrm/lang/en_us.json
@@ -36,8 +36,8 @@
   "tooltip.vrm:pes2": "[Crouching Charge] Releases toxin around charger",
   "tooltip.vrm:pes3": "[Crouching Shoot] Shoots 3 Magical Arrows but with poor accuracy",
   "tooltip.vrm:pes4": "[Immune to all Negative potion effects]",
-  "tooltip.vrm:fam1": "Absorbs nearby life force to fill hunger",
-  "tooltip.vrm:fam2": "[Charging] Releases toxin around charger",
+  "tooltip.vrm:fam1": "Absorbs nearby life force to fill hunger [if equipped, absorbs from creatures]",
+  "tooltip.vrm:fam2": "[Right-Click] Make nearby animals crave for lust",
   "tooltip.vrm:fam3": "[Shift Right-Click] ",
   "tooltip.vrm:fam4": "[Immune to all Negative potion effects]",
   "death.attack.death": "%1$s was reaped by %2$s",
