--- a/src/main/resources/assets/vrm/lang/en_us.json
+++ b/src/main/resources/assets/vrm/lang/en_us.json
@@ -27,19 +27,23 @@
   "tooltip.vrm:death1": "Attack have a chance to life steal",
   "tooltip.vrm:death2": "[Right-Click] Mark surrounding targets, dealing more damage",
   "tooltip.vrm:death3": "[Shift Right-Click] Apply voodoo(all damage will be transferred to target) onto target",
-  "tooltip.vrm:death4": "[Have a chance of revival on death & dealing target's half max hp damage]",
+  "tooltip.vrm:death4": "[On Hold] Revival on death & dealing target's half max hp as damage to target",
   "tooltip.vrm:war1": "Attack have a chance to ignite target",
-  "tooltip.vrm:war2": "[Right-Click] Gain temporary strength and resistance",
+  "tooltip.vrm:war2": "[Right-Click] Gain temporary strength and resistance, additional effect when low on health",
   "tooltip.vrm:war3": "[Shift Right-Click] Inflict rage and cause near-by mobs to fight each other",
-  "tooltip.vrm:war4": "[Gain resistance and strength on low health]",
+  "tooltip.vrm:war4": "[On Hold] Gain resistance and strength on low health",
   "tooltip.vrm:pes1": "Shoot Magical Arrow which causes Plague (will release toxin when target dies)",
   "tooltip.vrm:pes2": "[Crouching Charge] Releases toxin around charger",
   "tooltip.vrm:pes3": "[Crouching Shoot] Shoots 3 Magical Arrows but with poor accuracy",
-  "tooltip.vrm:pes4": "[Immune to all Negative potion effects]",
-  "tooltip.vrm:fam1": "Absorbs nearby life force to fill hunger [if equipped, absorbs from creatures]",
-  "tooltip.vrm:fam2": "[Right-Click] Make nearby animals crave for lust",
-  "tooltip.vrm:fam3": "[Shift Right-Click] ",
-  "tooltip.vrm:fam4": "[Immune to all Negative potion effects]",
-  "death.attack.death": "%1$s was reaped by %2$s",
-  "effect.vrm.plagueeffect": "Plague"
+  "tooltip.vrm:pes4": "[On Hold] Immune to all Negative potion effects",
+  "tooltip.vrm:fam1": "Absorbs nearby life force to fill hunger [if holding, absorbs from creatures]",
+  "tooltip.vrm:fam2": "[On Hold] Make nearby animals crave for lust",
+  "tooltip.vrm:fam3": "[On Hold] When attacked, have a chance to apply daze onto attacker",
+  "tooltip.vrm:fam4": "[Shift Right-Click] Sacrifice all hunger for full health",
+  "death.attack.reaper": "%1$s was reaped",
+  "death.attack.animal": "%1$s was nibbled to death",
+  "effect.vrm.plagueeffect": "Plague",
+  "effect.vrm.dazedeffect": "Dazed",
+  "message.vrm.cooldown": "Skill on cooldown for",
+  "message.vrm.error": "Unable to use skill"
 }
